--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -3,6 +3,8 @@
       package="com.ssb.droidsound"
       android:versionCode="1"
       android:versionName="1.0">
+
+	<uses-permission android:name="android.permission.INTERNET" />  
     <application android:icon="@drawable/icon" android:label="@string/app_name" android:debuggable="true">
         <activity android:name="DroidSound"
                   android:label="@string/app_name">
@@ -20,4 +22,5 @@
         <service android:name="PlayerService"/>
     </application>
     <uses-sdk android:minSdkVersion="3" />
+
 </manifest> 
