--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -13,12 +13,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="PlayListActivity"
-                  android:label="@string/app_name">
-            <intent-filter>
-                <action android:name="android.intent.action.VIEW" />
-			</intent-filter>
-        </activity>
+        <activity android:name="PlayListActivity"/>
+        <activity android:name="SearchActivity"/>
+        <activity android:name="SearchResultActivity"/>
         <service android:name="PlayerService"/>
     </application>
     <uses-sdk android:minSdkVersion="3" />
