--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -6,8 +6,7 @@
 
 	<uses-permission android:name="android.permission.INTERNET" />  
     <application android:icon="@drawable/icon" android:label="@string/app_name" android:debuggable="true">
-        <activity android:name="DroidSound"
-                  android:label="@string/app_name">
+        <activity android:name="DroidSound" android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -16,7 +15,16 @@
         <activity android:name="PlayListActivity"/>
         <activity android:name="SearchActivity"/>
         <activity android:name="SearchResultActivity"/>
-        <service android:name="PlayerService"/>
+        <service android:name="PlayerService">        
+ 	       <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <data android:mimeType="audio/prs.sid" />
+				<data android:mimeType="audio/psid" />
+				<data android:mimeType="audio/x-psid" />
+				<data android:mimeType="audio/sidtune" />
+				<data android:mimeType="audio/x-sidtune" />
+            </intent-filter>
+        </service>
     </application>
     <uses-sdk android:minSdkVersion="3" />
 
