--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,45 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-      package="com.ssb.droidsound"
-      android:versionCode="1"
-      android:versionName="1.0">
+	package="com.ssb.droidsound" android:versionCode="1"
+	android:versionName="1.0">
 
-	<uses-permission android:name="android.permission.INTERNET" />  
-    <application android:icon="@drawable/icon" android:label="@string/app_name" android:debuggable="true">
-        <activity android:name="PlayerActivity" android:label="@string/app_name">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-         <intent-filter>
-                <action android:name="android.intent.action.VIEW" />
-                <category android:name="android.intent.category.DEFAULT" />
- 				<category android:name="android.intent.category.BROWSABLE" />
-                <data android:scheme="http" />
-                <data android:scheme="content"/>
-                <data android:scheme="file"/>
-                <data android:mimeType="audio/prs.sid" />
-                <data android:mimeType="audio/x-sid" />
-                <data android:mimeType="audio/x-mod" />
-                <data android:mimeType="audio/x-s3m" />
-                <data android:mimeType="audio/x-xm" />
-                <data android:mimeType="audio/x-it" />
+	<uses-permission android:name="android.permission.INTERNET" />
+	<application android:icon="@drawable/icon" android:label="@string/app_name"
+		android:debuggable="true">
+		<activity android:name="PlayerActivity" android:label="@string/app_name">
+			<intent-filter>
+				<action android:name="android.intent.action.MAIN" />
+				<category android:name="android.intent.category.LAUNCHER" />
+			</intent-filter>
 
-                <data android:mimeType="audio/x-gbs" />
-                <data android:mimeType="audio/x-nsf" />
-                <data android:mimeType="audio/x-spc" />
-                <data android:mimeType="audio/x-gym" />
-                <data android:mimeType="audio/x-ay" />
-                <data android:mimeType="audio/x-vgm" />
-                <data android:mimeType="audio/x-vgz" />
-            </intent-filter>         
-        </activity>
-        <activity android:name="PlayListActivity"/>
-        <activity android:name="SearchActivity"/>
-        <activity android:name="SearchResultActivity"/>
-        <service android:name="PlayerService">       
-        </service>
-    </application>
-    <uses-sdk android:minSdkVersion="3" />
+			<intent-filter>
+				<action android:name="android.intent.action.VIEW" />
+				<category android:name="android.intent.category.DEFAULT" />
+				<category android:name="android.intent.category.BROWSABLE" />
+				<data android:scheme="http" />
+				<data android:scheme="content" />
+				<data android:scheme="file" />
+				<data android:mimeType="audio/prs.sid" />
+				<data android:mimeType="audio/x-sid" />
+				<data android:mimeType="audio/x-mod" />
+				<data android:mimeType="audio/x-s3m" />
+				<data android:mimeType="audio/x-xm" />
+				<data android:mimeType="audio/x-it" />
+
+				<data android:mimeType="audio/x-gbs" />
+				<data android:mimeType="audio/x-nsf" />
+				<data android:mimeType="audio/x-spc" />
+				<data android:mimeType="audio/x-gym" />
+				<data android:mimeType="audio/x-ay" />
+				<data android:mimeType="audio/x-vgm" />
+				<data android:mimeType="audio/x-vgz" />
+			</intent-filter>
+		</activity>
+		<activity android:name="PlayListActivity" />
+		<activity android:name="SearchActivity" />
+		<activity android:name="SearchResultActivity" />
+		<activity android:name="SearchableActivity">
+			<intent-filter>
+				<action android:name="android.intent.action.SEARCH" />
+			</intent-filter>
+			<meta-data android:name="android.app.searchable" android:resource="@xml/searchable" />
+		</activity>
+		<service android:name="PlayerService"/>
+	</application>
+	<uses-sdk android:minSdkVersion="3" />
 
 </manifest> 
