--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -35,16 +35,17 @@
 				<data android:mimeType="audio/x-vgz" />
 			</intent-filter>
 		</activity>
-		<activity android:name="PlayListActivity" />
+		<activity android:name=".PlayListActivity" />
 		<activity android:name="SearchActivity" />
 		<activity android:name="SearchResultActivity" />
-		<activity android:name="SearchableActivity">
+		<activity android:name=".SearchableActivity">
 			<intent-filter>
 				<action android:name="android.intent.action.SEARCH" />
 			</intent-filter>
 			<meta-data android:name="android.app.searchable" android:resource="@xml/searchable" />
 		</activity>
 		<service android:name="PlayerService"/>
+		<meta-data android:name="android.app.default_searchable" android:value=".SearchableActivity" />
 	</application>
 	<uses-sdk android:minSdkVersion="3" />
 
