--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -4,9 +4,13 @@
 	android:versionName="1.0">
 
 	<uses-permission android:name="android.permission.INTERNET" />
-	<application android:icon="@drawable/icon" android:label="@string/app_name"
-		android:debuggable="true">
-		<activity android:name="PlayerActivity" android:label="@string/app_name">
+	<application android:icon="@drawable/icon" android:label="@string/app_name" android:debuggable="true">
+		<activity android:name=".PlayerActivity" android:launchMode="singleTop" android:label="@string/app_name">
+			<intent-filter>
+				<action android:name="android.intent.action.SEARCH" />				
+			</intent-filter>
+			<meta-data android:name="android.app.searchable" android:resource="@xml/searchable" />
+
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN" />
 				<category android:name="android.intent.category.LAUNCHER" />
@@ -35,17 +39,9 @@
 				<data android:mimeType="audio/x-vgz" />
 			</intent-filter>
 		</activity>
-		<activity android:name=".PlayListActivity" />
-		<activity android:name="SearchActivity" />
-		<activity android:name="SearchResultActivity" />
-		<activity android:name=".SearchableActivity">
-			<intent-filter>
-				<action android:name="android.intent.action.SEARCH" />
-			</intent-filter>
-			<meta-data android:name="android.app.searchable" android:resource="@xml/searchable" />
-		</activity>
-		<service android:name="PlayerService"/>
-		<meta-data android:name="android.app.default_searchable" android:value=".SearchableActivity" />
+		
+		<service android:name=".PlayerService"/>
+		<meta-data android:name="android.app.default_searchable" android:value=".PlayerActivity" />
 	</application>
 	<uses-sdk android:minSdkVersion="3" />
 
