--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -40,7 +40,7 @@
 			</intent-filter>
 		</activity>
 		
-		<service android:name=".PlayerService"/>
+		<service android:name=".service.PlayerService"/>
 		<meta-data android:name="android.app.default_searchable" android:value=".PlayerActivity" />
 	</application>
 	<uses-sdk android:minSdkVersion="3" />
