--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
 	package="com.ssb.droidsound" android:versionCode="1"
-	android:versionName="1.0">
+	android:versionName="beta 2" >
 
 	<uses-permission android:name="android.permission.INTERNET" />
 	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
@@ -43,7 +43,7 @@
 		
 		<service android:name=".service.PlayerService"/>
 		
-		<provider android:name="com.ssb.droidsound.provider.SongProvider" android:authorities="com.ssb.droidsound.provider" />
+		<!-- provider android:name="com.ssb.droidsound.provider.SongProvider" android:authorities="com.ssb.droidsound.provider" / -->
 		
 		<meta-data android:name="android.app.default_searchable" android:value=".PlayerActivity" />
 	</application>
