--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -17,6 +17,9 @@
 				<category android:name="android.intent.category.LAUNCHER" />
 			</intent-filter>
 
+		</activity>
+		
+		<service android:name=".service.PlayerService">
 			<intent-filter>
 				<action android:name="android.intent.action.VIEW" />
 				<category android:name="android.intent.category.DEFAULT" />
@@ -38,10 +41,8 @@
 				<data android:mimeType="audio/x-ay" />
 				<data android:mimeType="audio/x-vgm" />
 				<data android:mimeType="audio/x-vgz" />
-			</intent-filter>
-		</activity>
-		
-		<service android:name=".service.PlayerService"/>
+			</intent-filter>		
+		</service>
 		
 		<!-- provider android:name="com.ssb.droidsound.provider.SongProvider" android:authorities="com.ssb.droidsound.provider" / -->
 		
