--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -5,7 +5,8 @@
 
 	<uses-permission android:name="android.permission.INTERNET" />
 	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-	<application android:icon="@drawable/icon" android:label="@string/app_name" android:debuggable="true">
+	<application android:icon="@drawable/icon" android:label="@string/app_name"
+	android:theme="@android:style/Theme.NoTitleBar" android:debuggable="true">
 		<activity android:name=".PlayerActivity" android:launchMode="singleTop" android:label="@string/app_name">
 			<intent-filter>
 				<action android:name="android.intent.action.SEARCH" />				
