--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,10 +1,11 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?> 
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
 	package="com.ssb.droidsound" android:versionCode="1"
 	android:versionName="beta 3" >
 
 	<uses-permission android:name="android.permission.INTERNET" />
 	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+	<uses-permission android:name="android.permission.READ_PHONE_STATE" />
 	<application android:icon="@drawable/icon" android:label="@string/app_name"
 	android:theme="@android:style/Theme.NoTitleBar" android:debuggable="true">
 		<activity android:name=".PlayerActivity" android:launchMode="singleTop" android:label="@string/app_name">
