--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -26,6 +26,7 @@
 				<data android:scheme="http" />
 				<data android:scheme="content" />
 				<data android:scheme="file" />
+								
 				<data android:mimeType="audio/prs.sid" />
 				<data android:mimeType="audio/x-sid" />
 				<data android:mimeType="audio/x-mod" />
@@ -35,12 +36,21 @@
 
 				<data android:mimeType="audio/x-gbs" />
 				<data android:mimeType="audio/x-nsf" />
+				<data android:mimeType="audio/x-nsfe" />
 				<data android:mimeType="audio/x-spc" />
 				<data android:mimeType="audio/x-gym" />
 				<data android:mimeType="audio/x-ay" />
 				<data android:mimeType="audio/x-vgm" />
 				<data android:mimeType="audio/x-vgz" />
 			</intent-filter>		
+
+			<intent-filter>				
+				<action android:name="android.intent.action.VIEW" />
+				<category android:name="android.intent.category.DEFAULT" />
+				<data android:scheme="file" />
+				<data android:mimeType="application/zip" />
+			</intent-filter>
+
 
 		</activity>
 		
