--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -6,6 +6,7 @@
 	<uses-permission android:name="android.permission.INTERNET" />
 	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 	<uses-permission android:name="android.permission.READ_PHONE_STATE" />
+	<uses-permission android:name="android.permission.WAKE_LOCK" />
 	<application android:icon="@drawable/icon" android:label="@string/app_name"
 	android:theme="@android:style/Theme.NoTitleBar" android:debuggable="false">
 		<activity android:name=".PlayerActivity" android:launchMode="singleTop" android:label="@string/app_name">
