--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?> 
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-	package="com.ssb.droidsound" android:versionCode="3"
-	android:versionName="1.0.1" >
+	package="com.ssb.droidsound" android:versionCode="5"
+	android:versionName="1.1beta1" >
 
 	<uses-permission android:name="android.permission.INTERNET" />
 	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 	<uses-permission android:name="android.permission.READ_PHONE_STATE" />
-	<uses-permission android:name="android.permission.WAKE_LOCK" />
+	<!-- uses-permission android:name="android.permission.WAKE_LOCK" / -->
 	<application android:icon="@drawable/icon" android:label="@string/app_name"
 	android:theme="@android:style/Theme.NoTitleBar" android:debuggable="false">
 		<activity android:name=".PlayerActivity" android:launchMode="singleTop" android:label="@string/app_name">
