Shoutcast-streaming MP3-streaming with shout/ice-cast metadata now works for both OpenCore and Stagefright-phones.

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?> 
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
 	package="com.ssb.droidsound" android:installLocation="auto"
-	android:versionName="1.2beta1" android:versionCode="10">
+	android:versionName="1.2beta2" android:versionCode="10">
 
 	<uses-permission android:name="android.permission.INTERNET" />
 	<uses-permission android:name="android.permission.WAKE_LOCK" />
@@ -9,7 +9,7 @@
 	<uses-permission android:name="android.permission.READ_PHONE_STATE" />
 
 	<application android:icon="@drawable/icon" android:label="@string/app_name"
-	android:theme="@android:style/Theme.NoTitleBar" android:debuggable="false">
+	android:theme="@android:style/Theme.NoTitleBar" android:debuggable="true">
 		<activity android:name=".PlayerActivity" android:launchMode="singleTop" android:label="@string/app_name">
 			<intent-filter>
 				<action android:name="android.intent.action.SEARCH" />				
