--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -9,7 +9,7 @@
 	<uses-permission android:name="android.permission.READ_PHONE_STATE" />
 
 	<application android:icon="@drawable/icon" android:label="@string/app_name"
-	android:theme="@android:style/Theme.NoTitleBar" android:debuggable="true">
+	android:theme="@android:style/Theme.NoTitleBar" android:debuggable="false">
 		<activity android:name=".PlayerActivity" android:launchMode="singleTop" android:label="@string/app_name">
 			<intent-filter>
 				<action android:name="android.intent.action.SEARCH" />				
@@ -41,6 +41,7 @@
 				<data android:mimeType="audio/x-s3m" />
 				<data android:mimeType="audio/x-xm" />
 				<data android:mimeType="audio/x-it" />
+				<data android:mimeType="audio/x-mpegurl" />
 
 				<data android:mimeType="audio/x-gbs" />
 				<data android:mimeType="audio/x-nsf" />
