--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -9,7 +9,7 @@
 	<uses-permission android:name="android.permission.READ_PHONE_STATE" />
 
 	<application android:icon="@drawable/droidsound64x64" android:label="@string/app_name"
-	android:theme="@android:style/Theme.NoTitleBar" android:debuggable="false">
+	android:theme="@android:style/Theme.NoTitleBar" android:debuggable="true">
 		<activity android:name=".PlayerActivity" android:launchMode="singleTop" android:label="@string/app_name">
 			<intent-filter>
 				<action android:name="android.intent.action.SEARCH" />				
