--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -7,6 +7,9 @@
 	<uses-permission android:name="android.permission.WAKE_LOCK" />
 	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 	<uses-permission android:name="android.permission.READ_PHONE_STATE" />
+	<uses-permission android:name="android.permission.WRITE_SETTINGS" ></uses-permission>
+	<uses-permission android:name="android.permission.CHANGE_CONFIGURATION" ></uses-permission>
+	<uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS" ></uses-permission>
 
 	<application android:icon="@drawable/droidsound64x64" android:label="@string/app_name"
 	android:theme="@android:style/Theme.NoTitleBar" android:debuggable="false">
@@ -75,5 +78,6 @@
 		<meta-data android:name="android.app.default_searchable" android:value=".PlayerActivity" />
 	</application>
 	<uses-sdk android:minSdkVersion="4" />
+
 
 </manifest> 
