--- a/.classpath
+++ b/.classpath
@@ -3,6 +3,6 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="gen"/>
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
-	<classpathentry kind="lib" path="jar/htmlcleaner-2.2.jar"/>
+	<classpathentry kind="lib" path="libs/htmlcleaner-2.2.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
