--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?> 
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
 	package="com.ssb.droidsound" android:installLocation="auto"
-	android:versionName="1.2beta3 (TEST)" android:versionCode="12">
+	android:versionName="1.2beta3" android:versionCode="12">
 
 	<uses-permission android:name="android.permission.INTERNET" />
 	<uses-permission android:name="android.permission.WAKE_LOCK" />
