--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?> 
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-	package="com.ssb.droidsound" android:installLocation="auto"
-	android:versionName="1.2beta3" android:versionCode="12">
+	package="com.ssb.droidsoundedit" android:installLocation="auto"
+	android:versionName="1.2beta4" android:versionCode="12">
 
 	<uses-permission android:name="android.permission.INTERNET" />
 	<uses-permission android:name="android.permission.WAKE_LOCK" />
@@ -13,7 +13,7 @@
 
 	<application android:icon="@drawable/droidsound64x64" android:label="@string/app_name"
 	android:theme="@android:style/Theme.NoTitleBar" android:debuggable="false">
-		<activity android:name=".PlayerActivity" android:launchMode="singleTop" android:label="@string/app_name">
+		<activity android:name="com.ssb.droidsound.PlayerActivity" android:launchMode="singleTop" android:label="@string/app_name">
 			<intent-filter>
 				<action android:name="android.intent.action.SEARCH" />
 			</intent-filter>
@@ -68,10 +68,10 @@
 
 		</activity>
 		
-		<service android:name=".service.PlayerService"/>
+		<service android:name="com.ssb.droidsound.service.PlayerService"/>
 		
-		<activity android:name=".SettingsActivity" />
-		<activity android:name=".HelpActivity" />
+		<activity android:name="com.ssb.droidsound.SettingsActivity" />
+		<activity android:name="com.ssb.droidsound.HelpActivity" />
 		
 		<!-- provider android:name="com.ssb.droidsound.provider.SongProvider" android:authorities="com.ssb.droidsound.provider" / -->
 		
