-Implemented Buffered I/O for some sections of DroidSoundPlugin.java and VICEPlugin.java
    -This buffered I/O should increase performance a little bit, but if anyone has used any previous versions and experiences slowdowns, please tell me.

-Added a section to the preferences that allows you to see the download list even if you don't have Internet.
-Updated the Downloads option to point to my version of the HTML download list. This one has more up to date music packs. Also the addition of the ASMA (Atari SAP Music Archive).

------UPDATE----------

-Forgot to version one of the files.

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -72,6 +72,7 @@
 		
 		<activity android:name="com.ssb.droidsound.SettingsActivity" />
 		<activity android:name="com.ssb.droidsound.HelpActivity" />
+		<activity android:name="com.ssb.droidsound.DownloadLocalActivity" />
 		
 		<!-- provider android:name="com.ssb.droidsound.provider.SongProvider" android:authorities="com.ssb.droidsound.provider" / -->
 		
