--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -13,7 +13,7 @@
 	<!--  uses-permission android:name="android.permission.CHANGE_CONFIGURATION" />  -->
 	<uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS" />
 
-	<application android:icon="@drawable/droidsound64x64" android:label="@string/app_name" android:debuggable="false">
+	<application android:icon="@drawable/droidsound64x64" android:label="@string/app_name" android:debuggable="false" android:name=".app.Application">
 		<activity android:name=".PlayerActivity" android:launchMode="singleTop" android:label="@string/app_name">
 			<intent-filter>
 				<action android:name="android.intent.action.SEARCH" />
