--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,25 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?> 
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-	package="com.ssb.droidsound" android:installLocation="auto"
-	android:versionName="1.2beta3" android:versionCode="12">
-
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.ssb.droidsound" android:versionName="2" android:versionCode="20">
     <uses-sdk android:minSdkVersion="14" />
     
-	<uses-permission android:name="android.permission.INTERNET" />
-	<uses-permission android:name="android.permission.WAKE_LOCK" />
 	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 	<uses-permission android:name="android.permission.READ_PHONE_STATE" />
 	<uses-permission android:name="android.permission.WRITE_SETTINGS" />
-	<!--  uses-permission android:name="android.permission.CHANGE_CONFIGURATION" />  -->
-	<uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS" />
 
 	<application android:icon="@drawable/droidsound64x64" android:label="@string/app_name" android:debuggable="false" android:name=".app.Application">
-		<activity android:name=".PlayerActivity" android:launchMode="singleTop" android:label="@string/app_name">
-			<intent-filter>
-				<action android:name="android.intent.action.SEARCH" />
-			</intent-filter>
-			<meta-data android:name="android.app.searchable" android:resource="@xml/searchable" />
-
+		<activity android:name=".activity.PlayerActivity" android:launchMode="singleTop" android:label="@string/app_name">
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN" />
 				<category android:name="android.intent.category.LAUNCHER" />
@@ -35,8 +23,6 @@
 				<action android:name="android.intent.action.VIEW" />
 				<category android:name="android.intent.category.DEFAULT" />
 				<category android:name="android.intent.category.BROWSABLE" />
-				<data android:scheme="http" />
-				<data android:scheme="content" />
 				<data android:scheme="file" />
 								
 				<data android:mimeType="audio/prs.sid" />
@@ -58,25 +44,9 @@
 				<data android:mimeType="application/x-prg" />
 				<data android:mimeType="application/octet-stream" />
 			</intent-filter>		
-
-			<intent-filter>				
-				<action android:name="android.intent.action.VIEW" />
-				<category android:name="android.intent.category.DEFAULT" />
-				<data android:scheme="file" />
-				<data android:mimeType="application/zip" />
-			</intent-filter>
-
-
 		</activity>
 		
 		<service android:name=".service.PlayerService"/>
-		
-		<activity android:name=".SettingsActivity" />
-		<activity android:name=".HelpActivity" />
-		
-		<!-- provider android:name="com.ssb.droidsound.provider.SongProvider" android:authorities="com.ssb.droidsound.provider" / -->
-		
-		<meta-data android:name="android.app.default_searchable" android:value=".PlayerActivity" />
 	</application>
 
 </manifest> 
