--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -5,6 +5,7 @@
 	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 	<uses-permission android:name="android.permission.READ_PHONE_STATE" />
 	<uses-permission android:name="android.permission.WRITE_SETTINGS" />
+	<uses-permission android:name="android.permission.BROADCAST_STICKY"/>
 
 	<application android:icon="@drawable/droidsound64x64" android:label="@string/app_name" android:debuggable="false" android:name=".app.Application">
 		<activity android:name=".activity.PlayerActivity" android:launchMode="singleTop" android:label="@string/app_name">
