--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,56 +1,69 @@
-<?xml version="1.0" encoding="utf-8"?> 
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.ssb.droidsound" android:versionName="2" android:versionCode="20">
+<?xml version="1.0" encoding="utf-8"?>
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    package="com.ssb.droidsound"
+    android:versionCode="20"
+    android:versionName="2" >
+
     <uses-sdk android:minSdkVersion="14" />
-    
-	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-	<uses-permission android:name="android.permission.READ_PHONE_STATE" />
-	<uses-permission android:name="android.permission.WRITE_SETTINGS" />
-	<uses-permission android:name="android.permission.BROADCAST_STICKY"/>
 
-	<application android:icon="@drawable/droidsound64x64" android:label="@string/app_name" android:debuggable="false" android:name=".app.Application">
-		<activity android:name=".activity.PlayerActivity" android:launchMode="singleTop" android:label="@string/app_name"
-		    android:windowSoftInputMode="stateHidden">
-			<intent-filter>
-				<action android:name="android.intent.action.MAIN" />
-				<category android:name="android.intent.category.LAUNCHER" />
-			</intent-filter>
+    <uses-permission android:name="android.permission.BROADCAST_STICKY" />
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_SETTINGS" />
 
-			 <intent-filter>
+    <application
+        android:name=".app.Application"
+        android:debuggable="false"
+        android:icon="@drawable/droidsound64x64"
+        android:label="@string/app_name" >
+        <activity
+            android:name=".activity.PlayerActivity"
+            android:label="@string/app_name"
+            android:launchMode="singleTop"
+            android:windowSoftInputMode="stateHidden" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+            <intent-filter>
                 <action android:name="android.intent.action.SEND" />
+
                 <category android:name="android.intent.category.DEFAULT" />
+
                 <data android:mimeType="text/plain" />
             </intent-filter>
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
 
-			<intent-filter>
-				<action android:name="android.intent.action.VIEW" />
-				<category android:name="android.intent.category.DEFAULT" />
-				<category android:name="android.intent.category.BROWSABLE" />
-				<data android:scheme="file" />
-								
-				<data android:mimeType="audio/prs.sid" />
-				<data android:mimeType="audio/x-sid" />
-				<data android:mimeType="audio/x-mod" />
-				<data android:mimeType="audio/x-s3m" />
-				<data android:mimeType="audio/x-xm" />
-				<data android:mimeType="audio/x-it" />
-				<data android:mimeType="audio/x-mpegurl" />
-				<data android:mimeType="audio/x-scpls" />
-				<data android:mimeType="audio/x-gbs" />
-				<data android:mimeType="audio/x-nsf" />
-				<data android:mimeType="audio/x-nsfe" />
-				<data android:mimeType="audio/x-spc" />
-				<data android:mimeType="audio/x-gym" />
-				<data android:mimeType="audio/x-ay" />
-				<data android:mimeType="audio/x-vgm" />
-				<data android:mimeType="audio/x-vgz" />
-				<data android:mimeType="application/x-prg" />
-				<data android:mimeType="application/octet-stream" />
-			</intent-filter>		
-		</activity>		
-		<activity android:name=".activity.SettingsActivity"/>
-		
-		<service android:name=".service.MusicIndexService"/>
-		<service android:name=".service.PlayerService"/>
-	</application>
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
 
-</manifest> 
+                <data android:scheme="file" />
+                <data android:mimeType="audio/prs.sid" />
+                <data android:mimeType="audio/x-sid" />
+                <data android:mimeType="audio/x-mod" />
+                <data android:mimeType="audio/x-s3m" />
+                <data android:mimeType="audio/x-xm" />
+                <data android:mimeType="audio/x-it" />
+                <data android:mimeType="audio/x-mpegurl" />
+                <data android:mimeType="audio/x-scpls" />
+                <data android:mimeType="audio/x-gbs" />
+                <data android:mimeType="audio/x-nsf" />
+                <data android:mimeType="audio/x-nsfe" />
+                <data android:mimeType="audio/x-spc" />
+                <data android:mimeType="audio/x-gym" />
+                <data android:mimeType="audio/x-ay" />
+                <data android:mimeType="audio/x-vgm" />
+                <data android:mimeType="audio/x-vgz" />
+                <data android:mimeType="application/x-prg" />
+                <data android:mimeType="application/octet-stream" />
+            </intent-filter>
+        </activity>
+        <activity android:name=".activity.SettingsActivity" />
+
+        <service android:name=".service.MusicIndexService" />
+        <service android:name=".service.PlayerService" />
+    </application>
+
+</manifest>
