Get rid of services.
I've determined that Android services are useless. Here's another
try while I search for the optimum way to write applications.

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -61,8 +61,7 @@
         </activity>
         <activity android:name=".activity.SettingsActivity" />
 
-        <service android:name=".service.MusicIndexService" />
-        <service android:name=".service.PlayerService" />
+        <service android:name=".service.ProtectionMoneyService" />
     </application>
 
 </manifest>
