--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?> 
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
 	package="com.ssb.droidsound" android:installLocation="auto"
-	android:versionName="1.2beta3" android:versionCode="12">
+	android:versionName="1.3" android:versionCode="14">
 
 	<uses-permission android:name="android.permission.INTERNET" />
 	<uses-permission android:name="android.permission.WAKE_LOCK" />
@@ -11,8 +11,9 @@
 	<!--  uses-permission android:name="android.permission.CHANGE_CONFIGURATION" />  -->
 	<uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS" />
 
-	<application android:icon="@drawable/droidsound64x64" android:label="@string/app_name"
-	android:theme="@android:style/Theme.NoTitleBar" android:debuggable="false">
+	<uses-sdk android:targetSdkVersion="8" android:minSdkVersion="8" />
+	
+	<application android:icon="@drawable/droidsound64x64" android:label="@string/app_name" android:theme="@android:style/Theme.NoTitleBar">
 		<activity android:name=".PlayerActivity" android:launchMode="singleTop" android:label="@string/app_name">
 			<intent-filter>
 				<action android:name="android.intent.action.SEARCH" />
@@ -68,6 +69,12 @@
 
 		</activity>
 		
+		<receiver android:name=".service.RemoteControlReceiver">
+    		<intent-filter>
+        		<action android:name="android.intent.action.MEDIA_BUTTON" />
+    		</intent-filter>
+		</receiver>
+		
 		<service android:name=".service.PlayerService"/>
 		
 		<activity android:name=".SettingsActivity" />
@@ -76,8 +83,8 @@
 		<!-- provider android:name="com.ssb.droidsound.provider.SongProvider" android:authorities="com.ssb.droidsound.provider" / -->
 		
 		<meta-data android:name="android.app.default_searchable" android:value=".PlayerActivity" />
+		
 	</application>
-	<uses-sdk android:minSdkVersion="4" />
 
 
 </manifest> 
