--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -20,7 +20,7 @@
 	<application
 		android:icon="@drawable/droidsound64x64"
 		android:label="@string/app_name"
-		android:debuggable="false"
+		android:debuggable="true"
 		android:theme="@android:style/Theme.NoTitleBar" >
 		<activity
 			android:name=".PlayerActivity"
